--- a/src/styles/dialogs/new-shipment.css
+++ b/src/styles/dialogs/new-shipment.css
@@ -1,7 +1,9 @@
 #new-shipment-dialog {
-  width: 70vw;
-  
-  min-height: 40vh;
+  max-width: 98%;
+  max-height: 98%;
+  width: 98%;
+  height: 98%;
+  border-radius: 0;
 }
 
 .product-list {
