--- a/src/templates/shipments.html
+++ b/src/templates/shipments.html
@@ -1,17 +1,20 @@
 <md-content flex layout-padding>
   <h1>{{ title }}</h1>
   
-  <md-button class="md-fab" ng-click="openCreateShipmentDialog()" aria-label="Add">
+  <md-button class="md-fab" ng-click="openEntryShipmentDialog()" aria-label="Add">
     <md-icon>add</md-icon>
   </md-button>
   
   <md-list>
-    <md-list-item class="md-3-line" ng-repeat="shipment in shipments">
+    <md-list-item
+      class="md-3-line"
+      ng-repeat="shipment in shipments"
+      ng-click="openShipmentDetailsDialog(shipment._id)">
       <div class="md-list-item-text">
-        <h3>Data: {{ shipment.scheduledFor }}</h3>
+        <h3>Data: {{ shipment.scheduledFor | date:'d MMMM yyyy' : 'UTC' }}</h3>
         <h3>Tipo: {{ shipment.type }}</h3>
         <h4 ng-if="shipment.type === 'entry'">
-          Fornecedor: {{ shipment.source.name }}
+          Fornecedor: {{ shipment.supplier.name }}
         </h4>
         <h4 ng-if="shipment.type === 'exit'">
           Destinatário: {{ shipment.destination.name }}
