--- a/src/templates/shipments.exits.html
+++ b/src/templates/shipments.exits.html
@@ -1,7 +1,7 @@
 <md-content flex layout-padding>
-  <h1>{{ title }}</h1>
+  <h1>Saídas</h1>
   
-  <md-button class="md-fab" ng-click="openEntryShipmentDialog()" aria-label="Add">
+  <md-button class="md-fab" ng-click="openExitShipmentDialog()" aria-label="Add">
     <md-icon>add</md-icon>
   </md-button>
   
