--- a/src/templates/dialogs/shipment/new-entry.html
+++ b/src/templates/dialogs/shipment/new-entry.html
@@ -1,7 +1,7 @@
 <md-dialog id="new-shipment-dialog" class="fullscreen">
   <md-toolbar>
     <div class="md-toolbar-tools">
-      <h2>Novo carregamento</h2>
+      <h2>Nova entrada</h2>
       <span flex></span>
       <md-button ng-click="close()" class="md-icon-button">
         <md-icon>close</md-icon>
@@ -17,7 +17,6 @@
           md-min-date="minDate"></md-datepicker>
         
         <md-autocomplete
-          ng-show="shipmentData.type === 'entry'"
           class="md-block"
           md-selected-item="supplier"
           md-floating-label="Fornecedor"
@@ -29,24 +28,6 @@
           md-item-text="org.name"
           md-search-text="shipmentData._sourceOrgSearchText"
           md-items="org in searchOrganizations(shipmentData._sourceOrgSearchText)">
-          <md-item-template>
-            {{ org.name }}
-          </md-item-template>
-        </md-autocomplete>
-        
-        <md-autocomplete
-          ng-show="shipmentData.type === 'exit'"
-          class="md-block"
-          md-selected-item="shipmentData.destination"
-          md-floating-label="Destinatário"
-          required
-          
-          placeholder="Nome da organização"
-          md-no-cache
-          md-require-match
-          md-item-text="org.name"
-          md-search-text="shipmentData._destinationOrgSearchText"
-          md-items="org in searchOrganizations(shipmentData._destinationOrgSearchText)">
           <md-item-template>
             {{ org.name }}
           </md-item-template>
@@ -93,7 +74,7 @@
                   <label>Unidade</label>
                   <md-select ng-model="allocation.quantity.unit" required>
                     <md-option ng-value="'kg'">Kg</md-option>
-                    <md-option ng-value="'l'">Litros</md-option>
+                    <md-option ng-value="'litros'">Litros</md-option>
                   </md-select>
                   <div ng-messages="allocation.$error">
                     <div ng-message="required">Unit is required</div>
